[package]
name = "pallet-randomness-beacon"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true
description = "Verifiable Randomness Beacon FRAME pallet"
homepage = "https://substrate.io"

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.197", default-features = false }

frame-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
frame-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
pallet-session = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
pallet-authorship = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-consensus-beefy-etf = { git = "https://github.com/ideal-lab5/etf.git", branch = "tony/dev", default-features = false, features = ["serde", "bls-experimental"] }
pallet-etf = { path = "../etf", default-features = false }
pallet-beefy = { package = "pallet-beefy-etf", path = "../beefy-etf", default-features = false }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false, features = ["serde"] }
sp-session = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false, features = ["serde"] }
sp-std = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }

w3f-bls = { version = "0.1.3", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }
array-bytes = "6.1"
sha3 = { version = "0.10.0", default-features = false }
sha2 = { version = "0.10.8", default-features =  false }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "dev", default-features = false}

[dev-dependencies]
frame-election-provider-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-balances = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-staking-reward-curve = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-state-machine = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing"  }
pallet-beefy-mmr = { package = "pallet-beefy-mmr-etf", path = "../beefy-mmr-etf" }
pallet-mmr = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing"  }

[features]
default = ["std"]
std = [
	"ark-ff/std",
	"ark-std/std",
	"ark-serialize/std",
	"ark-bls12-377/std",
	"codec/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde/std",
	"sp-consensus-beefy-etf/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
	"pallet-etf/std",
	"pallet-beefy/std",
	"w3f-bls/std",
	"sha3/std",
	"sha2/std",
	"etf-crypto-primitives/std",
	"pallet-authorship/std"
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
