[package]
name = "pallet-scheduler"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
frame-benchmarking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false , optional = true }
frame-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
frame-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-std = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-weights = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
docify = "0.2.6"
pallet-randomness-beacon = { default-features = false, path = "../randomness-beacon" }

[dev-dependencies]
pallet-preimage = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
substrate-test-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "main" }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature"] }
# sp-consensus-etf-aura = { path = "../../primitives/consensus/aura" }
pallet-etf = { default-features = false, path = "../etf" }
# pallet-etf-aura = { version = "4.0.0-dev", default-features = false, path = "../aura" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false  }
rand_chacha = { version = "0.3.1", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	# "pallet-etf/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-preimage/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"pallet-etf/std",
	"pallet-timestamp/std",
	"pallet-randomness-beacon/std"
	# "sha3/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-preimage/try-runtime",
	"sp-runtime/try-runtime",
]
