[package]
name = "pallet-etf"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "BEEFY FRAME pallet"
homepage = "https://substrate.io"

[lints]
workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { workspace = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive", "serde"] }
serde = { optional = true, workspace = true, default-features = true }
frame-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
frame-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
pallet-authorship = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
pallet-session = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-consensus-beefy-etf = { path = "../../primitives/consensus/beefy-etf", default-features = false, features = ["serde", "bls-experimental"] }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false, features = ["serde"] }
sp-session = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
sp-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false, features = ["serde"] }
sp-std = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }

ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", features = ["curve"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
frame-election-provider-support = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-balances = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-offences = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-staking-reward-curve = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
pallet-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-staking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing" }
sp-state-machine = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
pallet-beefy = { package = "pallet-beefy-etf", path = "../beefy-etf" }
pallet-beefy-mmr = { package = "pallet-beefy-mmr-etf", path = "../beefy-mmr-etf" }
pallet-mmr = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }
array-bytes = "6.1"
binary-merkle-tree = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "testing", default-features = false }

[features]
default = ["std"]
std = [
	"ark-std/std",
	"ark-serialize/std",
	"ark-bls12-377/std",
	"codec/std",
	"frame-election-provider-support/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"serde/std",
	"sp-consensus-beefy-etf/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
]
try-runtime = [
	"frame-election-provider-support/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
