[package]
name = "sp-crypto-idn"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://idealabs.network"
repository.workspace = true
description = "Crypto primitives for the Ideal Network."

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[features]
default = ["std"]
std = []