[package]
name = "node-template"
description = "A solochain node template built with Substrate, part of Polkadot Sdk."
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

build = "build.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
quote = "1.0.36"
futures = { version = "0.3.30", features = ["thread-pool"] }
serde_json = { version = "1.0.114", default-features = true }
jsonrpsee = { version = "0.23", features = ["server"] }

# substrate client
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git" }

# substrate primitives
sp-wasm-interface = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-crypto-ec-utils = { git = "https://github.com/paritytech/polkadot-sdk.git",  features = ["bls12-381"]}
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git" }

# frame and pallets
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git",  default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git" }

# Local Dependencies
node-template-runtime = { path = "../runtime" }

# CLI-specific dependencies
# try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk.git",  optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git" }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"node-template-runtime/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"frame-system/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"node-template-runtime/try-runtime",
	"sp-runtime/try-runtime",
	# "try-runtime-cli/try-runtime",
]
